# serverGPT

./: .gitmodules  CMakeLists.txt  README.md  client_example.py
gpt4all-backend/: CMakeLists.txt
src/: CMakeLists.txt  chat.cpp  chat_header.h  header.h  openai.h  parse_json.h  server.h  utils.h
